# ioracle_old

./: Cargo.toml  Rocket.toml  readme.md
migrations/2021-02-09-083915_answers/: up.sql
migrations/2021-02-11-081916_trigrams/: down.sql  up.sql
migrations/2021-02-11-081921_hexagrams/: down.sql  up.sql
src/: errors.rs  iching.rs  lang.rs  main.rs  models.rs  schema.rs  views.rs  wires.rs
static/css/: custom.css
static/js/: scripts.js
templates/: answer.html.tera  index.html.tera  layout.html.tera
