[package]
name = "ioracle"
version = "0.1.0"
authors = ["Denis K. <konsistentsi@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
uuid = { version = "0.8", features = ["v4"]  }
chrono = { version = "0.4", features = ["serde"] }
lettre = "0.9"
lettre_email = "0.9"
rppal = "0.11"
# rand = "0.8"
serialport = "3.3.0"
# serialport = "4.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_sqlite_pool", "tera_templates", "serve"]
